Backend: save document